--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "symfony/yaml": "dev-master"
+        "symfony/yaml": "~2.2"
     },
 
     "autoload": {
