--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "symfony/yaml": "~2.2"
+        "php": ">=5.3.0"
     },
 
     "require-dev": {
